# One

./: .gitignore  CMakeLists.txt  README.md
common/src/: CMakeLists.txt  FileUtils.cpp  FileUtils.h  List.cpp  StringUtils.cpp  StringUtils.h  SystemUtils.cpp  WatchTimer.cpp  WatchTimer.h
common/test/: CollectionUtilsTest.cpp  StringUtilsTest.cpp
compiler/src/: CMakeLists.txt
coroutine/test/: CMakeLists.txt  CoClientTest.cpp  CoServerTest.cpp  CoctxSwapTest.cpp  CoroutineTest.cpp
depend/: CMakeLists.txt
doc/: One变量搜索.xmind  One开发规划.xmind  One目录.xmind  One编译器参数.xmind  One编译器框架规范.xmind  One语言字符串格式化规则.xmind  One语言操作符重载.xmind  One语言类型转换.xmind  One语言规划.xmind  one.json.xmind  one语言规划书.docx  task.txt  变量定义加赋值.xmind  对象内存.xmind
framework/src/: CMakeLists.txt  Interface.cpp  Interface.h  OneInterface.cpp  OneInterface.h  OneObject.cpp  OneObject.h  OneString.cpp  OneSystem.cpp  OneSystem.h  Pointer.h  Reference.h  RunClass.cpp  RunClass.h
one/HttpClient/: one.json
one/HttpServer/: one.json
one/std/: Array.one  Out.one  (+3 more)
src/: CMakeLists.txt
src/common/src/: CMakeLists.txt  CollectionUtils.h  Common.h  FileUtils.cpp  FileUtils.h  FolderUtils.cpp  FolderUtils.h  List.h  PointerUtils.h  StringUtils.cpp  StringUtils.h  SystemUtils.cpp  SystemUtils.h
src/compiler/src/: CMakeLists.txt  Compiler.cpp  Version.h
src/compiler/src/analyzer/: OneCodeAnalyzer.cpp  OneCodeAnalyzer.h
src/compiler/src/analyzer/engine/: CodeAnalyzer.cpp  RuleEngine.cpp  RuleEngine.h
src/compiler/src/analyzer/lex/: LexAnalyzer.cpp  LexElement.cpp
src/compiler/src/analyzer/map/: RuleContainer.h  RuleMapNode.h  RuleStep.h
src/compiler/src/analyzer/one/: OneRuleMap.cpp  OneRuleMap.h  OneStream.h
src/compiler/src/analyzer/rule/: Rule.h  RuleAnalyzer.cpp  RuleBlock.h  one.rule
src/compiler/src/common/: Result.h
src/compiler/src/explainer/: OneExplainer.cpp  OneExplainer.h
src/compiler/src/explainer/common/: FuncType.h  Instruct.h  Keyword.h  Member.h  VarType.h
src/compiler/src/explainer/explain/: ExplainAssign.h  ExplainClass.h  ExplainCode.h  ExplainContainer.cpp  ExplainContainer.h  ExplainContext.cpp  ExplainContext.h  ExplainExp.h  ExplainFile.h  ExplainForBlock.h  ExplainFunc.h  ExplainIdentifier.h  ExplainIfBlock.h  ExplainLambda.h  ExplainNew.h  ExplainOperator.h  ExplainPrefix.h  ExplainSentence.h  ExplainTryCatch.h  ExplainType.h  ExplainVar.h  ExplainVarDef.h  ExplainWhileBlock.h
src/compiler/src/explainer/meta/: MetaBase.cpp  MetaBase.h  MetaBlock.cpp  MetaBlock.h  MetaBoxBase.cpp  MetaBoxBase.h  MetaClass.cpp  MetaClass.h  MetaConst.cpp  MetaConst.h  MetaContainer.cpp  MetaContainer.h  MetaData.cpp  MetaData.h  MetaFile.cpp  MetaFunc.cpp  MetaFunc.h  MetaGenerator.cpp  MetaGenerator.h  MetaInstruct.h  MetaPackage.cpp  MetaTemplateParam.h  MetaType.cpp  MetaType.h  MetaVarRef.cpp  MetaVarRef.h  MetaVariable.cpp  MetaVariable.h
src/compiler/src/explainer/syntax/: SyntaxBase.cpp  SyntaxBase.h  SyntaxBlock.h  SyntaxClass.cpp  SyntaxClass.h  SyntaxConst.h  SyntaxData.h  SyntaxElement.h  SyntaxExp.cpp  SyntaxExp.h  SyntaxFile.cpp  SyntaxFile.h  SyntaxForBlock.h  SyntaxFunc.h  SyntaxIfBlock.h  SyntaxInstruct.h  SyntaxMulti.h  SyntaxTryCatch.h  SyntaxType.h  SyntaxVar.cpp  SyntaxVar.h  SyntaxVarDef.cpp  SyntaxVarDef.h  SyntaxWhileBlock.h
src/compiler/src/generator/: CppGenerator.cpp  CppGenerator.h
src/compiler/src/generator/cpp/: CppBase.cpp  CppClass.cpp  CppClass.h  CppFile.h  CppFunc.h  CppPackage.h
src/compiler/src/generator/dump/: Dumper.cpp  Dumper.h  OByteStream.cpp  OByteStream.h
src/compiler/src/project/: Project.cpp  Project.h  ProjectConfig.h  ProjectConfigLoader.cpp  ProjectConfigLoader.h
src/compiler/test/onetest/: CMakeLists.txt
src/compiler/test/onetest/one/std/: OneStdArray.h  OneStdObject.h  OneStdString.h  OneStdSystem.h
src/compiler/test/onetest/one/test/: OneTestHelloOne.cpp  OneTestHelloOne.h  OneTestHelloOneMainAnony0.cpp
src/coroutine/src/: CMakeLists.txt
src/coroutine/src/coctx/: CMakeLists.txt  coctx.cpp  coctx.h  coctx_swap_linux.s  coctx_swap_rcxrdx.s  coctx_swap_rsirdi.s  coctx_swap_win.s  coctx_swap_x86_64_linux_gas.s  coctx_swap_x86_64_win_gas.s  coctx_swap_x86_64_win_masm.asm
src/coroutine/src/common/: Error.h
src/coroutine/src/engine/: CMakeLists.txt  CoCondition.cpp  CoCondition.h  CoEvent.cpp  CoEvent.h  CoFile.cpp  CoFile.h  CoFileIocp.cpp  CoFileIocp.h  CoMutex.cpp  CoMutex.h  CoSocketEpoll.cpp  CoSocketEpoll.h  CoSocketIocp.cpp  CoSocketIocp.h  CoStdOut.cpp  CoSystem.cpp  CoSystem.h  CoTimer.cpp  CoTimer.h  Coroutine.cpp  Coroutine.h  Engine.cpp  Engine.h  Timer.cpp  Timer.h  TimerManager.cpp  TimerManager.h
src/coroutine/src/file/: FileFlag.h
src/coroutine/src/file/iocp/: File.cpp  File.h
src/coroutine/src/file/posix/: File.cpp  File.h
src/coroutine/src/multithread/: AsyncQueue.cpp  AsyncQueue.h  Atomic.h  Event.h  LockFreeList.cpp  LockFreeQueue.inl  ThreadPool.h
src/coroutine/src/socket/: CMakeLists.txt  Network.h
src/coroutine/src/socket/epoll/: Epoll.cpp  Epoll.h  Socket.cpp  Socket.h
src/coroutine/src/socket/iocp/: Iocp.cpp  Iocp.h  OperateOverlapped.h  Socket.cpp  Socket.h
src/coroutine/src/thread/: Atomic.cpp  Event.cpp  Event.h  LockFreeList.cpp  LockFreeList.h  LockFreeQueue.h  LockFreeQueue.inl  Semaphore.cpp  Semaphore.h  ThreadPool.cpp  ThreadPool.h  ThreadPool2.cpp  ThreadPool2.h
src/coroutine/test/: CMakeLists.txt  CoClientTest.cpp  CoFileTest.cpp  CoSleepTest.cpp  FiberTest.cpp  ThreadSwitchTest.cpp
src/framework/src/: CMakeLists.txt  ExceptionHelper.cpp  ExceptionHelper.h  Interface.cpp  Interface.h  MetaClass.h  MetaContainer.cpp  MetaContainer.h  MetaManager.cpp  MetaManager.h  MetaPackage.h  ObjectPool.cpp  ObjectPool.h  OneArray.h  OneArray.inl  OneBaseType.h  OneBool.cpp  OneBool.h  OneBuffer.cpp  OneBuffer.h  OneChar.cpp  OneChar.h  OneClass.cpp  OneClass.h  OneDouble.cpp  OneDouble.h  OneException.cpp  OneException.h  OneField.h  OneFile.cpp  OneFile.h  OneFloat.cpp  OneFloat.h  OneFunction.h  OneInt.cpp  OneInt.h  OneInterface.cpp  OneInterface.h  OneIterable.h  OneIterator.h  (+33 more)
(+156 files in other folders)
