
aux_source_directory(./analyzer/common SEARCH_LIST)
set(SRC_LIST ${SRC_LIST} ${SEARCH_LIST})
aux_source_directory(./analyzer/engine SEARCH_LIST)
set(SRC_LIST ${SRC_LIST} ${SEARCH_LIST})
aux_source_directory(./analyzer/lex SEARCH_LIST)
set(SRC_LIST ${SRC_LIST} ${SEARCH_LIST})
aux_source_directory(./analyzer/map SEARCH_LIST)
set(SRC_LIST ${SRC_LIST} ${SEARCH_LIST})
aux_source_directory(./analyzer/one SEARCH_LIST)
set(SRC_LIST ${SRC_LIST} ${SEARCH_LIST})
aux_source_directory(./analyzer/rule SEARCH_LIST)
set(SRC_LIST ${SRC_LIST} ${SEARCH_LIST})
aux_source_directory(./analyzer SEARCH_LIST)
set(SRC_LIST ${SRC_LIST} ${SEARCH_LIST})

aux_source_directory(./explainer/common SEARCH_LIST)
set(SRC_LIST ${SRC_LIST} ${SEARCH_LIST})
aux_source_directory(./explainer/explain SEARCH_LIST)
set(SRC_LIST ${SRC_LIST} ${SEARCH_LIST})
aux_source_directory(./explainer/meta SEARCH_LIST)
set(SRC_LIST ${SRC_LIST} ${SEARCH_LIST})
aux_source_directory(./explainer/syntax SEARCH_LIST)
set(SRC_LIST ${SRC_LIST} ${SEARCH_LIST})
aux_source_directory(./explainer SEARCH_LIST)
set(SRC_LIST ${SRC_LIST} ${SEARCH_LIST})

aux_source_directory(./generator/cpp SEARCH_LIST)
set(SRC_LIST ${SRC_LIST} ${SEARCH_LIST})
aux_source_directory(./generator SEARCH_LIST)
set(SRC_LIST ${SRC_LIST} ${SEARCH_LIST})

add_library(compiler STATIC ${SRC_LIST})
