cmake_minimum_required(VERSION 3.0.0)
project(HelloOne VERSION 0.1.0)
add_definitions(-std=c++11)
include_directories(./ ../../../framework/src ../../../coroutine/src)
set(SRC_LIST ${SRC_LIST} one/test/OneTestHelloOne.cpp)
set(SRC_LIST ${SRC_LIST} one/test/OneTestHelloOneMainAnony0.cpp)
set(SRC_LIST ${SRC_LIST} main.cpp)
add_executable(HelloOne ${SRC_LIST})
target_link_libraries(HelloOne framework engine socket coctx common)
if(WIN32)
  target_link_libraries(HelloOne wsock32 ws2_32)
endif()
